--- a/data/templates/recipe.html
+++ b/data/templates/recipe.html
@@ -47,7 +47,7 @@
       </div> <!-- /Info text -->
 
       <div class="image">
-        <img src="/img/placeholder.jpg" />
+        <img src="/img/{{.Image}}" />
       </div>
 
     </div> <!-- /Info block -->
